* Only use emulated runtime attachment as fallback, remove the `--without-emulated-attach` option - {pull}1865[#1865]
* Instrument javax.servlet.Filter the same way as javax.servlet.FilterChain - {pull}1858[#1858]
* Propagate trace context headers in HTTP calls occurring from within traced exit points, for example - when using
Elasticsearch's REST client - {pull}1883[#1883]

[float]
===== Bug fixes
* Fix NPE with `null` binary header values + properly serialize them - {pull}1842[#1842]
* Fix `ListenerExecutionFailedException` when using Spring AMQP's ReplyTo container - {pull}1872[#1872]
* Enabling log ECS reformatting when using Logback configured with `LayoutWrappingEncoder` and a pattern layout - {pull}1879[#1879]
* Fix NPE with Webflux + context propagation headers - {pull}1871[#1871]
* Fix `ClassCastException` with `ConnnectionMetaData` and multiple classloaders - {pull}1864[#1864]
* Fix NPE in `co.elastic.apm.agent.servlet.helper.ServletTransactionCreationHelper.getClassloader` - {pull}1861[#1861]
* Fix for Jboss JMX unexpected notifications - {pull}1895[#1895]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.24.0]]
==== 1.24.0 - 2021/05/31

[float]
===== Features
* Basic support for Apache Struts 2 {pull}1763[#1763]
* Extending the <<config-log-ecs-reformatting>> config option to enable the overriding of logs with ECS-reformatted
events. With the new `OVERRIDE` option, non-file logs can be ECS-reformatted automatically as well - {pull}1793[#1793]
* Instrumentation for Vert.x Web {pull}1697[#1697]
* Changed log level of vm arguments to debug
* Giving precedence for the W3C `tracecontext` header over the `elastic-apm-traceparent` header - {pull}1821[#1821]
* Add instrumentation for Webflux - {pull}1305[#1305]

[float]
===== Bug fixes
* Fix another error related to instrumentation plugins loading on Windows - {pull}1785[#1785]
* Load Spring AMQP plugin- {pull}1784[#1784]