@@ -154,6 +154,11 @@ rendering
 |Captures incoming HTTP requests as transactions
 |1.24.0 (experimental)
 
+|Sparkjava (not Apache Spark)
+|2.x
+|The transactions are named based on your route (`GET /foo/:bar`).
+|1.25.0
+
 |===
 
 
